Refactored some code snippets